@@ -128,6 +128,11 @@ Layer <- proto(expr = {
   calc_statistic <- function(., data, scales) {
     if (is.null(data) || nrow(data) == 0) return(data.frame())
     
+    check_required_aesthetics(.$stat$required_aes, 
+      c(names(data), names(.$stat_params)), 
+      paste("stat_", .$stat$objname, sep=""))
+
+    
     res <- do.call(.$stat$calculate_groups, c(
       list(data=as.name("data"), scales=as.name("scales")), 
       .$stat_params)
@@ -152,6 +157,7 @@ Layer <- proto(expr = {
   
   map_statistic <- function(., data, plot) {
     if (is.null(data) || length(data) == 0 || nrow(data) == 0) return()
+
     aesthetics <- defaults(.$mapping, 
       defaults(plot$mapping, .$stat$default_aes()))
 
